buildkite-agent/deploy/0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildkite-agent
  namespace: buildkite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildkite-agent
  template:
    metadata:
      labels:
        app: buildkite-agent
    spec:
      serviceAccountName: buildkite-agent
      containers:
      - name: buildkite-agent
        image: buildkite/agent:latest
