buildkite-agent/deploy/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkite-agent
  namespace: hello-world
spec:
  selector:
    app: buildkite-agent
  ports:
  - port: 8000
    targetPort: 8000
